syntax = "proto3";

package time_series;

option go_package = "timeseriespb";

service TimeSeriesService {
  rpc QueryData (QueryRequest) returns (QueryResponse) {}
}

message QueryRequest {
  int64 start = 1;
  int64 end = 2;
  string window = 3;
  string aggregation = 4;
}

message TimeSeriesData {
  int64 time = 1;
  double value = 2;
}

message QueryResponse {
  repeated TimeSeriesData data = 1;
}
